# BeamLab21

./: .gitignore  LICENSE  README.md  Testing.ipynb  Tutorial.ipynb  lib.py  projectmap.docx  pyproject.toml
BEACH/: compute.py  config_fit.yaml  fit.py  lib.py  testbeam.npy
beamlab21/compute/: config_compute.yaml
beamlab21/fit/: config_fit.yaml  fit.py
compute/: coef_file.csv  compute.py  config_compute.yaml
configs/: config_compute.yaml  config_fit.yaml  config_fit.yaml.j2
dronesims/: __init__.py
fit/: __init__.py  coef_test.csv  config_fit.yaml  fit.py  lib.py  reduce_coef.py
outputs/: Coef_full.csv  Coef_full.csv.csv  GaussianModel_.npz  ZernikeModel_.npz  coef_reduced.csv  coefficients.csv  coefficients_.csv  reduced_coef.csv  scaleparameters.csv  testbeam.npz
src/: Tutorial.ipynb
src/beamlab21/: __init__.py  compute.py  fit.py  lib.py
src/beamlab21/compute/: __init__.py  compute.py
src/fit/: __init__.py  fit.py  reduce_coef.py
src/tests/: drone.ipynb
tests/: Testing.ipynb  coef_test2.csv
