[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BeamLab21"       # matches your package folder name
version = "0.1.0"
description = "Beam generation and fitting tools for HIRAX (but extendable to other arrays)"
authors = [
  { name = "Ajith Sampath", email = "ajithsampath1997@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "pyyaml",
  "matplotlib",
  "astropy",
  "pandas",
  "h5py"
]

license = { text = "Apache" }
